<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<!-- Informations de base du projet -->
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.miage.toulouse</groupId>
	<artifactId>ProjetL3</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>Suivi des étudiants</name>
	<description>Application donné pour le S6 de la MIAGE</description>

	<organization>
		<name>MIAGE L3</name>
	</organization>

	<!-- Nom des développeurs de l'application -->
	<developers>
		<developer>
			<name>Kevin Folvert</name>
			<id>kf</id>
			<email>...</email>
		</developer>

		<developer>
			<name>Indira Monnier</name>
			<id>im</id>
			<email>...</email>
		</developer>

		<developer>
			<name>Aline Mercier</name>
			<id>am</id>
			<email>...</email>
		</developer>

		<developer>
			<name>Elie Treport</name>
			<id>el</id>
			<email>...</email>
		</developer>
	</developers>


	<!-- Propriétés du POM (Genre de constante qui peuvent être réutilisés via 
		${nom propriété} -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<java.source.version>1.8</java.source.version>
		<java.target.version>1.8</java.target.version>
		<!-- chemin vers la classe contenant ton main -->
		<main-class>fr.miage.toulouse.ProjetL3.Main</main-class>
	</properties>

	<!-- Dépendance vers des librairies nécessaires pour le fonctionnement du 
		projet -->
	<dependencies>

		<!-- Dépendance nécessaire pour l'interface de l'application -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>13</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>13</version>
		</dependency>

		<!-- Dépendance pour les logs -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<!-- Dépendence utilisé pour manipuler un fichier CSV -->
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.3</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.4.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.1.0</version>
		</dependency>


	</dependencies>


	<!-- Informations relatives aux builds -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.5</version>
				<configuration>
					<mainClass>${main-class}</mainClass>
					<options>
						<option>--add-exports</option>
						<option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
					</options>
				</configuration>
			</plugin>

			<!-- Plugin utilisé pour incorporer les librairies au livrable .jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.3.0</version>

				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<appendAssemblyId>false</appendAssemblyId>
					<archive>
						<manifest>
							<mainClass>${main-class}</mainClass>
						</manifest>
					</archive>
				</configuration>

				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>
</project>